Changes in Shorewall 4.3.2

1) Added 'dhcp' option.

2) Add 'allowBcast' and 'dropBcast' builtin actions to Shorewall6.

Changes in Shorewall 4.3.1

1) Allow addresses in rules to be enclosed in square brackets.

2) Fix parsing of 6 hosts file.

3) Don't require Socket6 unless doing IPv6 DNS name resolution.

4) Add IP_FORWARDING to shorewall6.conf.

Changes in Shorewall 4.3.0

1) Verify User/Group names.

2) Don't allow compiled script named 'shorewall'.

3) Avoid problems when '$' appears on the first line of
/etc/shorewall/compile.

4) Add the output of "netstat -tunap" to dump

5) Allow '+' as an interface.

6) Change ipp2p detection to support latest version.

7) Fix NEW_CONNTRACK_MATCH.

8) Make use of --goto.

9) Allow ressetting individual chains.

10) IPv6 Alpha release.
