@@ -125,7 +125,7 @@ EXPORTPARAMS=No
 
 EXPAND_POLICIES=No
 
-KEEP_RT_TABLES=No
+KEEP_RT_TABLES=Yes
 
 DELETE_THEN_ADD=Yes
 
