@@ -125,7 +125,7 @@ EXPORTPARAMS=Yes
 
 EXPAND_POLICIES=Yes
 
-KEEP_RT_TABLES=No
+KEEP_RT_TABLES=Yes
 
 DELETE_THEN_ADD=Yes
 
