@@ -4,6 +4,8 @@ Changes in Shorewall 4.3.2
 
 2) Add 'allowBcast' and 'dropBcast' builtin actions to Shorewall6.
 
+3) Enable multi-ISP in Shorewall6.
+
 Changes in Shorewall 4.3.1
 
 1) Allow addresses in rules to be enclosed in square brackets.
